--- a/kz/careers.html
+++ b/kz/careers.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="kz">
     <head>
-        <title>People Find - Присоединяйтесь к нашей команде</title>
+        <title>People Find - Мансап</title>
         <meta charset="UTF-8" />
         <meta name="description" content="Meta Description" />
         <meta name="format-detection" content="telephone=no" />
@@ -26,14 +26,14 @@
                             <nav class="menu__body">
                                 <ul class="menu__list">
                                     <li class="menu__item">
-                                        <a href="/kz" class="menu__link">Главная</a>
+                                        <a href="/kz" class="menu__link">Үй</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/about.html" class="menu__link">О нас</a>
+                                        <a href="/kz/about.html" class="menu__link">Біз туралы</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="/kz/services.html" class="menu__link dropdown">
-                                            <span class="menu__text">Услуги</span>
+                                            <span class="menu__text">Қызметтер</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
                                                 class="arrow"
@@ -42,26 +42,28 @@
                                         <ul class="dropdown__menu">
                                             <li>
                                                 <a href="/kz/reckzitment.html"
-                                                    >Подбор руководящего персонала</a
+                                                    >Атқарушы жұмысқа қабылдау</a
                                                 >
                                             </li>
-                                            <li><a href="/kz/resources.html">Кадры</a></li>
-                                            <li><a href="/kz/training.html">Обучение</a></li>
                                             <li>
-                                                <a href="/kz/consulting.html">Консалтинг</a>
+                                                <a href="/kz/resources.html">Адам ресурстары</a>
+                                            </li>
+                                            <li><a href="/kz/training.html">Тренинг</a></li>
+                                            <li>
+                                                <a href="/kz/consulting.html">Кеңес беру</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/clients.html" class="menu__link">Клиенты</a>
+                                        <a href="/kz/clients.html" class="menu__link">Клиенттер</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="/kz/careers.html" class="menu__link active"
-                                            >Карьера</a
+                                            >Мансап</a
                                         >
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/contact.html" class="menu__link">Контакты</a>
+                                        <a href="/kz/contact.html" class="menu__link">Байланыс</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
@@ -92,24 +94,23 @@
                         <div class="clients__wrapper_top team__wrapper_top">
                             <div class="clients__content">
                                 <h2 class="clients__title section__title">
-                                    <span>Присоединяйтесь к нашей команде</span>
+                                    <span>Біздің командаға қосылыңыз</span>
                                 </h2>
                                 <p class="clients__desc">
-                                    <span>Workpoint</span> приглашает людей на всех этапах
-                                    академической или профессиональной карьеры присоединиться к нам,
-                                    приобрести ценный опыт и открыть для себя перспективные
-                                    карьерные возможности.
+                                    <span>Workpoint</span>-те біз академиялық немесе кәсіби жолының
+                                    барлық сатысындағы адамдарды бізбен араласуға, мағыналы тәжірибе
+                                    жинақтауға және пайдалы мансап мүмкіндіктерін ашуға шақырамыз.
                                 </p>
-                                <a href="contact.html" class="clients__btn btn">Свяжитесь с нами</a>
+                                <a href="contact.html" class="clients__btn btn">Хабарласыңыз</a>
                             </div>
                             <div class="benefits__items">
                                 <div class="benefits__item">
                                     <img src="/img/benefits-1.svg" alt="icon" />
-                                    <h3 class="benefits__subtitle">Финансы</h3>
+                                    <h3 class="benefits__subtitle">Қаржы</h3>
                                 </div>
                                 <div class="benefits__item">
                                     <img src="/img/benefits-2.svg" alt="icon" />
-                                    <h3 class="benefits__subtitle">Здравоохранение</h3>
+                                    <h3 class="benefits__subtitle">Денсаулық сақтау</h3>
                                 </div>
                                 <div class="benefits__item">
                                     <img src="/img/benefits-3.svg" alt="icon" />
@@ -117,30 +118,33 @@
                                 </div>
                             </div>
                         </div>
-                        <h2 class="team__title section__title"><span>Открытые вакансии</span></h2>
+                        <h2 class="team__title section__title"><span>Ашық позициялар</span></h2>
                         <p class="team__desc section__desc">
-                            Присоединяйтесь к динамичной команде, стремящейся к инновациям и росту.
+                            Инновациялар мен өсуге ұмтылатын динамикалық командаға қосылыңыз.
                         </p>
                         <div class="team__wrapper_bottom">
                             <div class="team__item">
                                 <div>
                                     <h3 class="team__item-title team__item-title_purple">
-                                        <img src="/img/star-purple.svg" alt="" /> Специалист по
-                                        подбору персонала
+                                        <img src="/img/star-purple.svg" alt="" /> HR Recruiter
                                     </h3>
-                                    <p class="team__item-desc">Полная занятость</p>
+                                    <p class="team__item-desc">Толық күн</p>
                                 </div>
-                                <a href="hr.html" class="team__item-btn btn">Требования</a>
+                                <a href="hr.html" class="team__item-btn btn"
+                                    >Жұмысқа қойылатын талаптар</a
+                                >
                             </div>
                             <div class="team__item">
                                 <div>
                                     <h3 class="team__item-title team__item-title_orange">
-                                        <img src="/img/star-orange.svg" alt="" /> Менеджер по работе
-                                        с ключевыми клиентами
+                                        <img src="/img/star-orange.svg" alt="" /> Негізгі есептік
+                                        жазба менеджері
                                     </h3>
-                                    <p class="team__item-desc">Полная занятость</p>
+                                    <p class="team__item-desc">Толық күн</p>
                                 </div>
-                                <a href="key-manager.html" class="team__item-btn btn">Требования</a>
+                                <a href="key-manager.html" class="team__item-btn btn"
+                                    >Жұмысқа қойылатын талаптар</a
+                                >
                             </div>
                         </div>
                     </div>
@@ -154,25 +158,35 @@
                                 <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
-                                <li class="footer__link"><a href="/kz">Главная</a></li>
-                                <li class="footer__link"><a href="/kz/about.html">О нас</a></li>
-                                <li class="footer__link"><a href="/kz/services.html">Услуги</a></li>
-                                <li class="footer__link"><a href="/kz/clients.html">Клиенты</a></li>
-                                <li class="footer__link"><a href="/kz/careers.html">Карьера</a></li>
+                                <li class="footer__link"><a href="/kz">Үй</a></li>
                                 <li class="footer__link">
-                                    <a href="/kz/contact.html">Контакты</a>
+                                    <a href="/kz/about.html">Біз туралы</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/services.html">Қызметтер</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/clients.html">Клиенттер</a>
+                                </li>
+                                <li class="footer__link"><a href="/kz/careers.html">Мансап</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/contact.html">Байланыс</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer__bottom">
                         <div class="footer__wrapper-bottom">
-                            <div class="footer__copy">Copyright © 2025. Все права защищены.</div>
+                            <div class="footer__copy">
+                                Copyright © 2025. Барлық құқықтар қорғалған.
+                            </div>
                             <ul class="footer__nav-bottom">
                                 <li class="footer__link">
-                                    <a href="policy.html">Политика конфиденциальности</a>
+                                    <a href="/kz/policy.html">Құпиялылық саясаты</a>
                                 </li>
-                                <li class="footer__link"><a href="terms.html">Условия</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/terms.html">Пайдалану шарттары</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
