--- a/kz/clients.html
+++ b/kz/clients.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="kz">
     <head>
-        <title>People Find - Клиенты</title>
+        <title>People Find - Клиенттер</title>
         <meta charset="UTF-8" />
         <meta name="description" content="Meta Description" />
         <meta name="format-detection" content="telephone=no" />
@@ -26,14 +26,14 @@
                             <nav class="menu__body">
                                 <ul class="menu__list">
                                     <li class="menu__item">
-                                        <a href="/kz" class="menu__link">Главная</a>
+                                        <a href="/kz" class="menu__link">Үй</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/about.html" class="menu__link">О нас</a>
+                                        <a href="/kz/about.html" class="menu__link">Біз туралы</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="/kz/services.html" class="menu__link dropdown">
-                                            <span class="menu__text">Услуги</span>
+                                            <span class="menu__text">Қызметтер</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
                                                 class="arrow"
@@ -42,26 +42,28 @@
                                         <ul class="dropdown__menu">
                                             <li>
                                                 <a href="/kz/reckzitment.html"
-                                                    >Подбор руководящего персонала</a
+                                                    >Атқарушы жұмысқа қабылдау</a
                                                 >
                                             </li>
-                                            <li><a href="/kz/resources.html">Кадры</a></li>
-                                            <li><a href="/kz/training.html">Обучение</a></li>
                                             <li>
-                                                <a href="/kz/consulting.html">Консалтинг</a>
+                                                <a href="/kz/resources.html">Адам ресурстары</a>
+                                            </li>
+                                            <li><a href="/kz/training.html">Тренинг</a></li>
+                                            <li>
+                                                <a href="/kz/consulting.html">Кеңес беру</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="menu__item">
                                         <a href="/kz/clients.html" class="menu__link active"
-                                            >Клиенты</a
+                                            >Клиенттер</a
                                         >
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/careers.html" class="menu__link">Карьера</a>
+                                        <a href="/kz/careers.html" class="menu__link">Мансап</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/contact.html" class="menu__link">Контакты</a>
+                                        <a href="/kz/contact.html" class="menu__link">Байланыс</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
@@ -92,20 +94,20 @@
                         <div class="clients__wrapper_top">
                             <div class="clients__content">
                                 <h2 class="clients__title section__title">
-                                    <span>Workpoint</span>
+                                    <span>Жұмыс нүктесі</span>
                                 </h2>
                                 <p class="clients__desc">
-                                    В <span>Workpoint</span> мы гордимся более чем 11-летним опытом
-                                    работы с широким кругом компаний — от малых предприятий до
-                                    крупных корпораций — в области обеспечения устойчивой
-                                    прибыльности.
+                                    <span>Workpoint</span>-те біз шағын бизнестен ірі
+                                    корпорацияларға дейінгі кең ауқымды компанияларға тұрақты
+                                    кірістілікке қол жеткізуге көмектесуге арналған 11 жылдан астам
+                                    уақытымызды мақтан тұтамыз.
                                 </p>
-                                <a href="contact.html" class="clients__btn btn">Свяжитесь с нами</a>
+                                <a href="contact.html" class="clients__btn btn">Хабарласыңыз</a>
                             </div>
                             <div class="clients__quote">
-                                Несмотря на то, что компании одного сектора могут иметь общие черты,
-                                наш опыт показывает, что каждая организация имеет свои собственные
-                                ценности и операционные требования.
+                                Бір сектордағы фирмалар ортақ қасиеттерді бөліссе де, біздің
+                                тәжірибе көрсеткендей, әрбір ұйымның өзіндік құндылықтары мен
+                                операциялық талаптары бар.
                             </div>
                         </div>
                         <div class="clients__wrapper_bottom">
@@ -115,21 +117,21 @@
                             </div>
                             <div class="clients__text" style="top: 0">
                                 <p class="text-left">
-                                    Наши клиенты представляют различные отрасли, такие как
-                                    производство, финансы, биотехнологии, фармацевтика, девелопмент
-                                    и управление недвижимостью, технологии, некоммерческие
-                                    организации и многие другие. Некоторые партнерские отношения
-                                    длятся уже более десяти лет, и клиенты постоянно обращаются к
-                                    нам за консультациями по расширению своей деятельности или
-                                    запуску новых инициатив.
+                                    Біздің клиенттеріміз өндіріс, қаржы, биотехнология,
+                                    фармацевтика, жылжымайтын мүлікті дамыту және басқару,
+                                    технология, коммерциялық емес ұйымдар және т.б. сияқты көптеген
+                                    салаларды ұсынады. Кейбір серіктестіктер он жылдан астам уақытқа
+                                    созылды, клиенттер өздерінің ағымдағы операцияларын кеңейту
+                                    немесе жаңа бастамаларды іске қосу үшін басшылық алу үшін бізге
+                                    тұрақты түрде оралады.
                                 </p>
                                 <p class="mt-20 text-right">
-                                    <span>Workpoint</span> может похвастаться надежной и гибкой
-                                    структурой, адаптированной к каждой отрасли, что демонстрирует
-                                    наше стремление к индивидуальному подходу. Наши представители
-                                    взаимодействуют с руководителями компаний, углубляясь в
-                                    дискуссии о том, как наши услуги могут быть адаптированы для
-                                    достижения их конкретных целей.
+                                    <span>Workpoint</span> әр салаға бейімделген берік және
+                                    бейімделгіш құрылымға ие, бұл біздің жекелендірілген
+                                    қарым-қатынастарға деген адалдығымызды көрсетеді. Біздің өкілдер
+                                    корпоративтік көшбасшылармен байланысып, біздің қызметтерімізді
+                                    олардың нақты мақсаттарына жету үшін қалай бейімдеуге болатынын
+                                    талқылауға кіріседі.
                                 </p>
                             </div>
                         </div>
@@ -144,25 +146,35 @@
                                 <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
-                                <li class="footer__link"><a href="/kz">Главная</a></li>
-                                <li class="footer__link"><a href="/kz/about.html">О нас</a></li>
-                                <li class="footer__link"><a href="/kz/services.html">Услуги</a></li>
-                                <li class="footer__link"><a href="/kz/clients.html">Клиенты</a></li>
-                                <li class="footer__link"><a href="/kz/careers.html">Карьера</a></li>
+                                <li class="footer__link"><a href="/kz">Үй</a></li>
                                 <li class="footer__link">
-                                    <a href="/kz/contact.html">Контакты</a>
+                                    <a href="/kz/about.html">Біз туралы</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/services.html">Қызметтер</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/clients.html">Клиенттер</a>
+                                </li>
+                                <li class="footer__link"><a href="/kz/careers.html">Мансап</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/contact.html">Байланыс</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer__bottom">
                         <div class="footer__wrapper-bottom">
-                            <div class="footer__copy">Copyright © 2025. Все права защищены.</div>
+                            <div class="footer__copy">
+                                Copyright © 2025. Барлық құқықтар қорғалған.
+                            </div>
                             <ul class="footer__nav-bottom">
                                 <li class="footer__link">
-                                    <a href="policy.html">Политика конфиденциальности</a>
+                                    <a href="/kz/policy.html">Құпиялылық саясаты</a>
                                 </li>
-                                <li class="footer__link"><a href="terms.html">Условия</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/terms.html">Пайдалану шарттары</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
