--- a/kz/consulting.html
+++ b/kz/consulting.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="kz">
     <head>
-        <title>People Find - Управленческий консалтинг</title>
+        <title>People Find - Менеджмент бойынша кеңес беру</title>
         <meta charset="UTF-8" />
         <meta name="description" content="Meta Description" />
         <meta name="format-detection" content="telephone=no" />
@@ -26,16 +26,16 @@
                             <nav class="menu__body">
                                 <ul class="menu__list">
                                     <li class="menu__item">
-                                        <a href="/kz" class="menu__link">Главная</a>
+                                        <a href="/kz" class="menu__link">Үй</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/about.html" class="menu__link">О нас</a>
+                                        <a href="/kz/about.html" class="menu__link">Біз туралы</a>
                                     </li>
                                     <li class="menu__item">
                                         <a
                                             href="/kz/services.html"
                                             class="menu__link active dropdown">
-                                            <span class="menu__text">Услуги</span>
+                                            <span class="menu__text">Қызметтер</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
                                                 class="arrow"
@@ -44,24 +44,26 @@
                                         <ul class="dropdown__menu">
                                             <li>
                                                 <a href="/kz/reckzitment.html"
-                                                    >Подбор руководящего персонала</a
+                                                    >Атқарушы жұмысқа қабылдау</a
                                                 >
                                             </li>
-                                            <li><a href="/kz/resources.html">Кадры</a></li>
-                                            <li><a href="/kz/training.html">Обучение</a></li>
                                             <li>
-                                                <a href="/kz/consulting.html">Консалтинг</a>
+                                                <a href="/kz/resources.html">Адам ресурстары</a>
+                                            </li>
+                                            <li><a href="/kz/training.html">Тренинг</a></li>
+                                            <li>
+                                                <a href="/kz/consulting.html">Кеңес беру</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/clients.html" class="menu__link">Клиенты</a>
+                                        <a href="/kz/clients.html" class="menu__link">Клиенттер</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/careers.html" class="menu__link">Карьера</a>
+                                        <a href="/kz/careers.html" class="menu__link">Мансап</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/contact.html" class="menu__link">Контакты</a>
+                                        <a href="/kz/contact.html" class="menu__link">Байланыс</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
@@ -91,12 +93,10 @@
                     <div class="services-page__container">
                         <div class="services-page__wrapper">
                             <div class="services-page__subtitle">
-                                <h2>Услуги</h2>
+                                <h2>Қызметтер</h2>
                             </div>
-                            <h1 class="services-page__title">Управленческий консалтинг</h1>
-                            <a href="contact.html" class="services-page__btn btn"
-                                >Свяжитесь с нами</a
-                            >
+                            <h1 class="services-page__title">Менеджмент бойынша кеңес беру</h1>
+                            <a href="contact.html" class="services-page__btn btn">Хабарласыңыз</a>
                         </div>
                     </div>
                 </section>
@@ -111,22 +111,20 @@
                             <div
                                 class="resources__content resources__content_v4 resources__content_v4">
                                 <p class="resources__desc resources__desc_v4 section__desc mt-0">
-                                    В <span>Workpoint</span> мы сотрудничаем с организациями всех
-                                    уровней, выступая в качестве стратегических консультантов для
-                                    высшего руководства и практических наставников для сотрудников
-                                    на местах. В рамках совместного процесса мы внедряем свежие
-                                    решения и работаем бок о бок с нашими клиентами, чтобы укрепить
-                                    потенциал персонала, оптимизировать эффективность и внедрить
-                                    современные подходы к повседневной деятельности.
+                                    <span>Workpoint</span>-те біз жоғары басшылық үшін стратегиялық
+                                    кеңесшілер және жергілікті қызметкерлер үшін практикалық
+                                    тәлімгер ретінде әрекет ете отырып, әр деңгейдегі ұйымдармен
+                                    серіктестік. Бірлескен үдеріс арқылы біз жаңа шешімдерді
+                                    енгіземіз және жұмыс күшінің мүмкіндіктерін нығайту, тиімділікті
+                                    оңтайландыру және күнделікті операцияларға заманауи тәсілдерді
+                                    енгізу үшін клиенттерімізбен бірге жұмыс істейміз.
                                 </p>
                                 <p class="resources__desc resources__desc_v4 section__desc">
-                                    В <span>Workpoint</span> наше стремление к постоянным инновациям
-                                    гарантирует, что ваша компания будет продолжать адаптироваться,
-                                    расти и добиваться успеха!
+                                    <span>Workpoint</span>-те біздің тұрақты инновацияларға деген
+                                    адалдығымыз сіздің компанияңыздың бейімделуін, өсуін және
+                                    табысқа жетуін қамтамасыз етеді!
                                 </p>
-                                <a href="contact.html" class="btn reckzitment__btn"
-                                    >Свяжитесь с нами</a
-                                >
+                                <a href="contact.html" class="btn reckzitment__btn">Хабарласыңыз</a>
                             </div>
                         </div>
                     </div>
@@ -140,25 +138,35 @@
                                 <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
-                                <li class="footer__link"><a href="/kz">Главная</a></li>
-                                <li class="footer__link"><a href="/kz/about.html">О нас</a></li>
-                                <li class="footer__link"><a href="/kz/services.html">Услуги</a></li>
-                                <li class="footer__link"><a href="/kz/clients.html">Клиенты</a></li>
-                                <li class="footer__link"><a href="/kz/careers.html">Карьера</a></li>
+                                <li class="footer__link"><a href="/kz">Үй</a></li>
                                 <li class="footer__link">
-                                    <a href="/kz/contact.html">Контакты</a>
+                                    <a href="/kz/about.html">Біз туралы</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/services.html">Қызметтер</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/clients.html">Клиенттер</a>
+                                </li>
+                                <li class="footer__link"><a href="/kz/careers.html">Мансап</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/contact.html">Байланыс</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer__bottom">
                         <div class="footer__wrapper-bottom">
-                            <div class="footer__copy">Copyright © 2025. Все права защищены.</div>
+                            <div class="footer__copy">
+                                Copyright © 2025. Барлық құқықтар қорғалған.
+                            </div>
                             <ul class="footer__nav-bottom">
                                 <li class="footer__link">
-                                    <a href="policy.html">Политика конфиденциальности</a>
+                                    <a href="/kz/policy.html">Құпиялылық саясаты</a>
                                 </li>
-                                <li class="footer__link"><a href="terms.html">Условия</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/terms.html">Пайдалану шарттары</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
