--- a/kz/hr.html
+++ b/kz/hr.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="kz">
     <head>
-        <title>People Find - Специалист по подбору персонала</title>
+        <title>People Find - HR Recruiter</title>
         <meta charset="UTF-8" />
         <meta name="description" content="Meta Description" />
         <meta name="format-detection" content="telephone=no" />
@@ -31,14 +31,14 @@
                             <nav class="menu__body">
                                 <ul class="menu__list">
                                     <li class="menu__item">
-                                        <a href="/kz" class="menu__link">Главная</a>
+                                        <a href="/kz" class="menu__link">Үй</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/about.html" class="menu__link">О нас</a>
+                                        <a href="/kz/about.html" class="menu__link">Біз туралы</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="/kz/services.html" class="menu__link dropdown">
-                                            <span class="menu__text">Услуги</span>
+                                            <span class="menu__text">Қызметтер</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
                                                 class="arrow"
@@ -47,26 +47,28 @@
                                         <ul class="dropdown__menu">
                                             <li>
                                                 <a href="/kz/reckzitment.html"
-                                                    >Подбор руководящего персонала</a
+                                                    >Атқарушы жұмысқа қабылдау</a
                                                 >
                                             </li>
-                                            <li><a href="/kz/resources.html">Кадры</a></li>
-                                            <li><a href="/kz/training.html">Обучение</a></li>
                                             <li>
-                                                <a href="/kz/consulting.html">Консалтинг</a>
+                                                <a href="/kz/resources.html">Адам ресурстары</a>
+                                            </li>
+                                            <li><a href="/kz/training.html">Тренинг</a></li>
+                                            <li>
+                                                <a href="/kz/consulting.html">Кеңес беру</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/clients.html" class="menu__link">Клиенты</a>
+                                        <a href="/kz/clients.html" class="menu__link">Клиенттер</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="/kz/careers.html" class="menu__link active"
-                                            >Карьера</a
+                                            >Мансап</a
                                         >
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/contact.html" class="menu__link">Контакты</a>
+                                        <a href="/kz/contact.html" class="menu__link">Байланыс</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
@@ -98,44 +100,42 @@
                             <div>
                                 <div class="vacancy__content">
                                     <h2 class="vacancy__title">
-                                        Специалист по <br />
-                                        <span class="purple"> подбору персонала </span>
+                                        <span class="purple"> HR Recruiter </span>
                                     </h2>
-                                    <h3 class="vacancy__subtitle">Обязанности:</h3>
+                                    <h3 class="vacancy__subtitle">Міндеттері:</h3>
 
                                     <ul class="vacancy__list vacancy__list_purple">
                                         <li class="vacancy__list-item">
-                                            Использование внешних и внутренних платформ для
-                                            продвижения вакансий.
+                                            Ашық позицияларды жылжыту үшін сыртқы және ішкі
+                                            платформаларды пайдалану.
                                         </li>
                                         <li class="vacancy__list-item">
-                                            Проведение тщательного отбора кандидатов посредством
-                                            телефонных и личных собеседований.
+                                            Телефон және бетпе-бет сұхбат арқылы кандидаттарды
+                                            мұқият тексеру.
                                         </li>
                                         <li class="vacancy__list-item">
-                                            Предоставление стратегических консультаций руководству
-                                            по вопросам подбора персонала.
+                                            Менеджментке жалдау тәсілдеріне қатысты стратегиялық
+                                            кеңес беру.
                                         </li>
                                         <li class="vacancy__list-item">
-                                            Управление графиком кандидатов и содействие процессу
-                                            окончательного отбора.
+                                            Кандидаттарды жоспарлауды басқару және соңғы іріктеу
+                                            процесін жеңілдету.
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="vacancy__content mt-20">
-                                    <h3 class="vacancy__subtitle">Навыки кандидата / профиль:</h3>
+                                    <h3 class="vacancy__subtitle">Үміткер / профиль дағдылары:</h3>
 
                                     <ul class="vacancy__list vacancy__list_purple">
                                         <li class="vacancy__list-item">
-                                            Предыдущий опыт работы от 12 месяцев до 2 лет
-                                            (желательно в сфере подбора персонала, но не
-                                            обязательно).
+                                            Бұрынғы жұмыс тәжірибесі 12 ай – 2 жыл (жұмысқа
+                                            қабылдауда жақсырақ, бірақ міндетті емес).
                                         </li>
                                         <li class="vacancy__list-item">
-                                            Отличные коммуникативные навыки.
+                                            Ерекше қарым-қатынас дағдылары.
                                         </li>
                                         <li class="vacancy__list-item">
-                                            Владение английским языком на продвинутом уровне.
+                                            Жетілдірілген ағылшын тілін білу.
                                         </li>
                                     </ul>
                                 </div>
@@ -152,16 +152,16 @@
                                             type="text"
                                             id="name"
                                             name="name"
-                                            data-error="Неправильное имя"
+                                            data-error="Қате атау"
                                             data-required
-                                            placeholder="Имя " />
+                                            placeholder="Аты " />
                                     </div>
                                     <div>
                                         <input
                                             type="text"
                                             id="surname"
                                             name="surname"
-                                            placeholder="Фамилия " />
+                                            placeholder="Тегі" />
                                     </div>
                                 </div>
 
@@ -172,15 +172,15 @@
                                             id="email"
                                             name="email"
                                             data-required="email"
-                                            data-error="Неправильная почта"
-                                            placeholder="Электронная почта " />
+                                            data-error="Қате пошта"
+                                            placeholder="Электрондық пошта " />
                                     </div>
                                     <div>
                                         <input
                                             type="text"
                                             name="phone"
                                             id="phone"
-                                            placeholder="Номер телефона" />
+                                            placeholder="Телефон нөмірі" />
                                     </div>
                                 </div>
 
@@ -188,24 +188,25 @@
                                     <textarea
                                         name="message"
                                         id="message"
-                                        placeholder="Расскажите, чем мы можем вам помочь"></textarea>
+                                        placeholder="Қалай көмектесе алатынымызды білуге ​​мүмкіндік беріңіз"></textarea>
                                 </div>
                                 <div>
-                                    <span class="upload__subtitle"
-                                        >Приложите соответствующие файлы:</span
-                                    >
+                                    <span class="upload__subtitle">Тиісті файлдарды тіркеңіз:</span>
                                 </div>
 
                                 <div class="form__file">
                                     <label for="file-upload" class="file-label">
-                                        <img src="/img/upload.svg" alt="upload" /> Загрузить файл
+                                        <img src="/img/upload.svg" alt="upload" /> Файлды жүктеп
+                                        салу
                                     </label>
                                     <input
                                         type="file"
                                         id="file-upload"
                                         name="attachment"
                                         class="file-input" />
-                                    <span id="file-chosen" class="file-chosen">Файл не выбран</span>
+                                    <span id="file-chosen" class="file-chosen"
+                                        >Ешбір файл таңдалмады</span
+                                    >
                                 </div>
                                 <!-- custom script -->
                                 <script>
@@ -225,14 +226,16 @@
                                 <div class="form__checkbox">
                                     <input type="checkbox" id="agree" name="agree" required />
                                     <label for="agree">
-                                        Я прочитал(а) и согласен(а) с
-                                        <a href="policy.html">Политикой конфиденциальности</a> и
-                                        <a href="terms.html">Условиями использования</a>
-                                        <span> Workpoint</span>!
+                                        Мен <span>Workpoint</span>
+                                        <a href="policy.html">құпиялылық саясатын</a> мен
+                                        <a href="terms.html">пайдалану шарттарын</a> оқыдым және
+                                        келісемін!
                                     </label>
                                 </div>
 
-                                <button class="contact__btn btn" type="submit">Отправить</button>
+                                <button class="contact__btn btn" type="submit">
+                                    Өтінішіңізді жіберіңіз
+                                </button>
                             </form>
                         </div>
                     </div>
@@ -246,25 +249,35 @@
                                 <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
-                                <li class="footer__link"><a href="/kz">Главная</a></li>
-                                <li class="footer__link"><a href="/kz/about.html">О нас</a></li>
-                                <li class="footer__link"><a href="/kz/services.html">Услуги</a></li>
-                                <li class="footer__link"><a href="/kz/clients.html">Клиенты</a></li>
-                                <li class="footer__link"><a href="/kz/careers.html">Карьера</a></li>
+                                <li class="footer__link"><a href="/kz">Үй</a></li>
                                 <li class="footer__link">
-                                    <a href="/kz/contact.html">Контакты</a>
+                                    <a href="/kz/about.html">Біз туралы</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/services.html">Қызметтер</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/clients.html">Клиенттер</a>
+                                </li>
+                                <li class="footer__link"><a href="/kz/careers.html">Мансап</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/contact.html">Байланыс</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer__bottom">
                         <div class="footer__wrapper-bottom">
-                            <div class="footer__copy">Copyright © 2025. Все права защищены.</div>
+                            <div class="footer__copy">
+                                Copyright © 2025. Барлық құқықтар қорғалған.
+                            </div>
                             <ul class="footer__nav-bottom">
                                 <li class="footer__link">
-                                    <a href="policy.html">Политика конфиденциальности</a>
+                                    <a href="/kz/policy.html">Құпиялылық саясаты</a>
                                 </li>
-                                <li class="footer__link"><a href="terms.html">Условия</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/terms.html">Пайдалану шарттары</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -293,7 +306,7 @@
                                 stroke-linecap="square"></path>
                         </svg>
                     </button>
-                    <div class="popup__text">Форма успешно отправлена!</div>
+                    <div class="popup__text">Пішін сәтті жіберілді!</div>
                 </div>
             </div>
         </div>
