--- a/kz/services.html
+++ b/kz/services.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="kz">
     <head>
-        <title>People Find - Услуги</title>
+        <title>People Find - Қызметтер</title>
         <meta charset="UTF-8" />
         <meta name="description" content="Meta Description" />
         <meta name="format-detection" content="telephone=no" />
@@ -26,16 +26,16 @@
                             <nav class="menu__body">
                                 <ul class="menu__list">
                                     <li class="menu__item">
-                                        <a href="/kz" class="menu__link">Главная</a>
+                                        <a href="/kz" class="menu__link">Үй</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/about.html" class="menu__link">О нас</a>
+                                        <a href="/kz/about.html" class="menu__link">Біз туралы</a>
                                     </li>
                                     <li class="menu__item">
                                         <a
                                             href="/kz/services.html"
                                             class="menu__link active dropdown">
-                                            <span class="menu__text">Услуги</span>
+                                            <span class="menu__text">Қызметтер</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
                                                 class="arrow"
@@ -44,24 +44,26 @@
                                         <ul class="dropdown__menu">
                                             <li>
                                                 <a href="/kz/reckzitment.html"
-                                                    >Подбор руководящего персонала</a
+                                                    >Атқарушы жұмысқа қабылдау</a
                                                 >
                                             </li>
-                                            <li><a href="/kz/resources.html">Кадры</a></li>
-                                            <li><a href="/kz/training.html">Обучение</a></li>
                                             <li>
-                                                <a href="/kz/consulting.html">Консалтинг</a>
+                                                <a href="/kz/resources.html">Адам ресурстары</a>
+                                            </li>
+                                            <li><a href="/kz/training.html">Тренинг</a></li>
+                                            <li>
+                                                <a href="/kz/consulting.html">Кеңес беру</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/clients.html" class="menu__link">Клиенты</a>
+                                        <a href="/kz/clients.html" class="menu__link">Клиенттер</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/careers.html" class="menu__link">Карьера</a>
+                                        <a href="/kz/careers.html" class="menu__link">Мансап</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/contact.html" class="menu__link">Контакты</a>
+                                        <a href="/kz/contact.html" class="menu__link">Байланыс</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
@@ -90,22 +92,22 @@
                 <section class="services-v2">
                     <div class="services__container">
                         <h2 class="services__title services__title-v2 section__title">
-                            <span>Инструменты и опыт, которые помогут</span> вам реализовать свои
-                            идеи.
+                            <span>Көруіңізді бір қадам</span> алға жылжытатын құралдар мен тәжірибе.
                         </h2>
                         <p class="services__desc section__desc">
-                            Оцените все возможности с помощью нашего спектра услуг.
+                            Біздің қызметтер ауқымы арқылы мүмкіндіктерді шарлаңыз.
                         </p>
-                        <a href="#" class="benefits__btn benefits__btn-v2 btn">Узнать больше</a>
+                        <a href="#" class="benefits__btn benefits__btn-v2 btn">Көбірек білу үшін</a>
                         <div class="services__wrapper">
                             <div class="services__item">
                                 <div class="services__item-img">
                                     <img src="/img/services-1.svg" alt="Services" />
                                 </div>
                                 <div>
-                                    <h3 class="services__item-title">Подбор руководящих кадров</h3>
+                                    <h3 class="services__item-title">Атқарушы жұмысқа қабылдау</h3>
                                     <a href="reckzitment.html" class="services__item-link"
-                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
+                                        >Көбірек білу үшін
+                                        <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
@@ -114,9 +116,10 @@
                                     <img src="/img/services-2.svg" alt="Services" />
                                 </div>
                                 <div>
-                                    <h3 class="services__item-title">Управление персоналом</h3>
+                                    <h3 class="services__item-title">Адам ресурстары</h3>
                                     <a href="resources.html" class="services__item-link"
-                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
+                                        >Көбірек білу үшін
+                                        <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
@@ -125,9 +128,10 @@
                                     <img src="/img/services-3.svg" alt="Services" />
                                 </div>
                                 <div>
-                                    <h3 class="services__item-title">Обучение</h3>
+                                    <h3 class="services__item-title">Тренинг</h3>
                                     <a href="training.html" class="services__item-link"
-                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
+                                        >Көбірек білу үшін
+                                        <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
@@ -137,10 +141,11 @@
                                 </div>
                                 <div>
                                     <h3 class="services__item-title">
-                                        Консультации по вопросам управления
+                                        Менеджмент бойынша кеңес беру
                                     </h3>
                                     <a href="consulting.html" class="services__item-link"
-                                        >Узнать больше <img src="/img/arrow-right.svg" alt="right"
+                                        >Көбірек білу үшін
+                                        <img src="/img/arrow-right.svg" alt="right"
                                     /></a>
                                 </div>
                             </div>
@@ -156,23 +161,35 @@
                                 <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
-                                <li class="footer__link"><a href="/kz">Главная</a></li>
-                                <li class="footer__link"><a href="/kzabout.html">О нас</a></li>
-                                <li class="footer__link"><a href="/kzservices.html">Услуги</a></li>
-                                <li class="footer__link"><a href="/kzclients.html">Клиенты</a></li>
-                                <li class="footer__link"><a href="/kzcareers.html">Карьера</a></li>
-                                <li class="footer__link"><a href="/kzcontact.html">Контакты</a></li>
+                                <li class="footer__link"><a href="/kz">Үй</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/about.html">Біз туралы</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/services.html">Қызметтер</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/clients.html">Клиенттер</a>
+                                </li>
+                                <li class="footer__link"><a href="/kz/careers.html">Мансап</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/contact.html">Байланыс</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer__bottom">
                         <div class="footer__wrapper-bottom">
-                            <div class="footer__copy">Copyright © 2025. Все права защищены.</div>
+                            <div class="footer__copy">
+                                Copyright © 2025. Барлық құқықтар қорғалған.
+                            </div>
                             <ul class="footer__nav-bottom">
                                 <li class="footer__link">
-                                    <a href="policy.html">Политика конфиденциальности</a>
+                                    <a href="/kz/policy.html">Құпиялылық саясаты</a>
                                 </li>
-                                <li class="footer__link"><a href="terms.html">Условия</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/terms.html">Пайдалану шарттары</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
