--- a/kz/training.html
+++ b/kz/training.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="kz">
     <head>
-        <title>People Find - Обучение</title>
+        <title>People Find - Тренинг</title>
         <meta charset="UTF-8" />
         <meta name="description" content="Meta Description" />
         <meta name="format-detection" content="telephone=no" />
@@ -26,16 +26,16 @@
                             <nav class="menu__body">
                                 <ul class="menu__list">
                                     <li class="menu__item">
-                                        <a href="/kz" class="menu__link">Главная</a>
+                                        <a href="/kz" class="menu__link">Үй</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/about.html" class="menu__link">О нас</a>
+                                        <a href="/kz/about.html" class="menu__link">Біз туралы</a>
                                     </li>
                                     <li class="menu__item">
                                         <a
                                             href="/kz/services.html"
                                             class="menu__link active dropdown">
-                                            <span class="menu__text">Услуги</span>
+                                            <span class="menu__text">Қызметтер</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
                                                 class="arrow"
@@ -44,24 +44,26 @@
                                         <ul class="dropdown__menu">
                                             <li>
                                                 <a href="/kz/reckzitment.html"
-                                                    >Подбор руководящего персонала</a
+                                                    >Атқарушы жұмысқа қабылдау</a
                                                 >
                                             </li>
-                                            <li><a href="/kz/resources.html">Кадры</a></li>
-                                            <li><a href="/kz/training.html">Обучение</a></li>
                                             <li>
-                                                <a href="/kz/consulting.html">Консалтинг</a>
+                                                <a href="/kz/resources.html">Адам ресурстары</a>
+                                            </li>
+                                            <li><a href="/kz/training.html">Тренинг</a></li>
+                                            <li>
+                                                <a href="/kz/consulting.html">Кеңес беру</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/clients.html" class="menu__link">Клиенты</a>
+                                        <a href="/kz/clients.html" class="menu__link">Клиенттер</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/careers.html" class="menu__link">Карьера</a>
+                                        <a href="/kz/careers.html" class="menu__link">Мансап</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/contact.html" class="menu__link">Контакты</a>
+                                        <a href="/kz/contact.html" class="menu__link">Байланыс</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="#" class="menu__link dropdown">
@@ -91,12 +93,10 @@
                     <div class="services-page__container">
                         <div class="services-page__wrapper">
                             <div class="services-page__subtitle">
-                                <h2>Услуги</h2>
+                                <h2>Қызметтер</h2>
                             </div>
-                            <h1 class="services-page__title">Обучение</h1>
-                            <a href="contact.html" class="services-page__btn btn"
-                                >Свяжитесь с нами</a
-                            >
+                            <h1 class="services-page__title">Тренинг</h1>
+                            <a href="contact.html" class="services-page__btn btn">Хабарласыңыз</a>
                         </div>
                     </div>
                 </section>
@@ -111,60 +111,57 @@
                             <div
                                 class="resources__content resources__content_v4 resources__content_v5">
                                 <p class="resources__desc resources__desc_v4 section__desc mt-0">
-                                    Переосмыслите подход к развитию сотрудников в свете меняющихся
-                                    ролей и навыков. Чтобы гарантировать, что каждая инициатива в
-                                    области обучения соответствует целям вашей компании, наши
-                                    консультанты используют различные методы оценки. Мы
-                                    разрабатываем индивидуальные учебные модули, которые учитывают
-                                    уникальные потребности вашей команды и соответствуют целям роста
-                                    и доходности вашей организации.
+                                    Сіздің бизнесіңіз дамып келе жатқан рөлдер мен дағдылар жиынтығы
+                                    үшін өз қызметкерлерін қалай дамытатынын қайта анықтаңыз. Әрбір
+                                    оқыту бастамасы сіздің компанияңыздың мақсаттарын қолдайтынына
+                                    кепілдік беру үшін біздің кеңесшілер әртүрлі бағалау әдістерін
+                                    пайдаланады. Біз ұйымыңыздың өсу және кіріс мақсаттарына сәйкес
+                                    келетін командаңыздың бірегей талаптарын қанағаттандыратын
+                                    теңшелген оқу модульдерін әзірлейміз.
                                 </p>
 
-                                <a href="contact.html" class="btn reckzitment__btn"
-                                    >Свяжитесь с нами</a
-                                >
+                                <a href="contact.html" class="btn reckzitment__btn">Хабарласыңыз</a>
                             </div>
                         </div>
                         <div class="training__wrapper">
                             <div class="training__item">
                                 <h3 class="training__item-title">
-                                    <span class="orange">Разработка</span>
+                                    <span class="orange">Даму</span>
                                 </h3>
                                 <p class="training__item-desc">
-                                    Наша команда экспертов поможет вашей организации определить
-                                    правильные вопросы и применить проверенные стратегии для
-                                    создания учебных решений, специально адаптированных к
-                                    требованиям вашего бизнеса.
+                                    Біздің сарапшылар тобы ұйымыңызға дұрыс сұрақтарды анықтауға
+                                    және бизнес талаптарына арнайы бейімделген оқу шешімдерін жасау
+                                    үшін дәлелденген стратегияларды қолдануға көмектеседі.
                                 </p>
                                 <a href="contact.html" class="training__item-btn btn"
-                                    >Свяжитесь с нами</a
+                                    >Хабарласыңыз</a
                                 >
                             </div>
                             <div class="training__item">
                                 <h3 class="training__item-title">
-                                    <span class="purple">Проведение</span>
+                                    <span class="purple">Жеткізу</span>
                                 </h3>
                                 <p class="training__item-desc">
-                                    Интерактивные сессии, практические упражнения и демонстрации
-                                    реальных ситуаций позволяют участникам приобрести необходимые
-                                    знания и навыки для выполнения своих должностных обязанностей
-                                    или работы в конкретных областях.
+                                    Интерактивті сессиялар, практикалық жаттығулар және нақты әлем
+                                    демонстрациялары қатысушыларды рөлдеріне немесе назар аударатын
+                                    салаларына қажетті маңызды білім мен дағдылармен жабдықтау үшін
+                                    ұсынылады.
                                 </p>
                                 <a href="contact.html" class="training__item-btn btn"
-                                    >Свяжитесь с нами</a
+                                    >Хабарласыңыз</a
                                 >
                             </div>
                             <div class="training__item">
                                 <h3 class="training__item-title">
-                                    <span class="green">Аренда</span>
+                                    <span class="green">Бөлмені жалға беру</span>
                                 </h3>
                                 <p class="training__item-desc">
-                                    Сделайте ваш следующий семинар, собеседование или презентацию
-                                    по-настоящему незабываемым, заказав один из наших полностью
-                                    оборудованных профессиональных конференц-залов.
+                                    Толығымен жабдықталған кәсіби жиналыс бөлмелерінің біріне
+                                    тапсырыс беру арқылы келесі семинарыңызды, сұхбатыңызды немесе
+                                    презентацияңызды шынымен ерекше етіңіз.
                                 </p>
                                 <a href="contact.html" class="training__item-btn btn"
-                                    >Свяжитесь с нами</a
+                                    >Хабарласыңыз</a
                                 >
                             </div>
                         </div>
@@ -179,25 +176,35 @@
                                 <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
-                                <li class="footer__link"><a href="/kz">Главная</a></li>
-                                <li class="footer__link"><a href="/kz/about.html">О нас</a></li>
-                                <li class="footer__link"><a href="/kz/services.html">Услуги</a></li>
-                                <li class="footer__link"><a href="/kz/clients.html">Клиенты</a></li>
-                                <li class="footer__link"><a href="/kz/careers.html">Карьера</a></li>
+                                <li class="footer__link"><a href="/kz">Үй</a></li>
                                 <li class="footer__link">
-                                    <a href="/kz/contact.html">Контакты</a>
+                                    <a href="/kz/about.html">Біз туралы</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/services.html">Қызметтер</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/clients.html">Клиенттер</a>
+                                </li>
+                                <li class="footer__link"><a href="/kz/careers.html">Мансап</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/contact.html">Байланыс</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer__bottom">
                         <div class="footer__wrapper-bottom">
-                            <div class="footer__copy">Copyright © 2025. Все права защищены.</div>
+                            <div class="footer__copy">
+                                Copyright © 2025. Барлық құқықтар қорғалған.
+                            </div>
                             <ul class="footer__nav-bottom">
                                 <li class="footer__link">
-                                    <a href="policy.html">Политика конфиденциальности</a>
+                                    <a href="/kz/policy.html">Құпиялылық саясаты</a>
                                 </li>
-                                <li class="footer__link"><a href="terms.html">Условия</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/terms.html">Пайдалану шарттары</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
