--- a/ru/about.html
+++ b/ru/about.html
@@ -146,7 +146,7 @@
                                 <li class="benefits__bottom-item">Корпорации</li>
                                 <li class="benefits__bottom-item">Гостиничный бизнес</li>
                                 <li class="benefits__bottom-item">Образовательные учреждения</li>
-                                <li class="benefits__bottom-item">Travel and Tourism</li>
+                                <li class="benefits__bottom-item">Туризм</li>
                                 <li class="benefits__bottom-item">Медицинские учреждения</li>
                                 <li class="benefits__bottom-item">Розничные сети</li>
                                 <li class="benefits__bottom-item">Финансовые услуги</li>
@@ -163,7 +163,7 @@
                                 <li class="benefits__bottom-item">Технологические предприятия</li>
                                 <li class="benefits__bottom-item">Организация мероприятий</li>
                                 <li class="benefits__bottom-item">Образовательные учреждения</li>
-                                <li class="benefits__bottom-item">Travel and Tourism</li>
+                                <li class="benefits__bottom-item">Туризм</li>
                                 <li class="benefits__bottom-item">Финансовые услуги</li>
                                 <li class="benefits__bottom-item">Транспорт и логистика</li>
                                 <li class="benefits__bottom-item">Строительные компании</li>
@@ -178,7 +178,7 @@
                                 <li class="benefits__bottom-item">Гостиничный бизнес</li>
                                 <li class="benefits__bottom-item">Розничные сети</li>
                                 <li class="benefits__bottom-item">Организация мероприятий</li>
-                                <li class="benefits__bottom-item">Travel and Tourism</li>
+                                <li class="benefits__bottom-item">Туризм</li>
                                 <li class="benefits__bottom-item">Транспорт и логистика</li>
                             </ul>
                         </div>
