--- a/ru/careers.html
+++ b/ru/careers.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru">
     <head>
-        <title>People Find - Присоединяйтесь к нашей команде</title>
+        <title>People Find - Карьера</title>
         <meta charset="UTF-8" />
         <meta name="description" content="Meta Description" />
         <meta name="format-detection" content="telephone=no" />
