--- a/kz/contact.html
+++ b/kz/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="kz">
     <head>
-        <title>People Find - Свяжитесь с нами</title>
+        <title>People Find - Байланыс</title>
         <meta charset="UTF-8" />
         <meta name="description" content="Meta Description" />
         <meta name="format-detection" content="telephone=no" />
@@ -31,14 +31,14 @@
                             <nav class="menu__body">
                                 <ul class="menu__list">
                                     <li class="menu__item">
-                                        <a href="/kz" class="menu__link">Главная</a>
+                                        <a href="/kz" class="menu__link">Үй</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/about.html" class="menu__link">О нас</a>
+                                        <a href="/kz/about.html" class="menu__link">Біз туралы</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="/kz/services.html" class="menu__link dropdown">
-                                            <span class="menu__text">Услуги</span>
+                                            <span class="menu__text">Қызметтер</span>
                                             <img
                                                 src="/img/arrow-menu.svg"
                                                 class="arrow"
@@ -47,25 +47,27 @@
                                         <ul class="dropdown__menu">
                                             <li>
                                                 <a href="/kz/reckzitment.html"
-                                                    >Подбор руководящего персонала</a
+                                                    >Атқарушы жұмысқа қабылдау</a
                                                 >
                                             </li>
-                                            <li><a href="/kz/resources.html">Кадры</a></li>
-                                            <li><a href="/kz/training.html">Обучение</a></li>
                                             <li>
-                                                <a href="/kz/consulting.html">Консалтинг</a>
+                                                <a href="/kz/resources.html">Адам ресурстары</a>
+                                            </li>
+                                            <li><a href="/kz/training.html">Тренинг</a></li>
+                                            <li>
+                                                <a href="/kz/consulting.html">Кеңес беру</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/clients.html" class="menu__link">Клиенты</a>
+                                        <a href="/kz/clients.html" class="menu__link">Клиенттер</a>
                                     </li>
                                     <li class="menu__item">
-                                        <a href="/kz/careers.html" class="menu__link">Карьера</a>
+                                        <a href="/kz/careers.html" class="menu__link">Мансап</a>
                                     </li>
                                     <li class="menu__item">
                                         <a href="/kz/contact.html" class="menu__link active"
-                                            >Контакты</a
+                                            >Байланыс</a
                                         >
                                     </li>
                                     <li class="menu__item">
@@ -96,17 +98,17 @@
                     <div class="contact__container">
                         <div class="contact__wrapper">
                             <div class="contact__content">
-                                <h2 class="contact__title section__title">Свяжитесь с нами</h2>
+                                <h2 class="contact__title section__title">Бізбен хабарласыңы</h2>
                                 <p class="contact__desc section__desc">
-                                    Хотите воспользоваться нашими выдающимися услугами, чтобы
-                                    продвинуть свою карьеру? Свяжитесь с нами по контактным данным
-                                    на этой странице, и мы ответим вам в кратчайшие сроки!
+                                    Мансапыңызды көтеру үшін біздің тамаша қызметтерімізді
+                                    пайдаланғыңыз келе ме? Осы беттегі байланыс деректері арқылы
+                                    хабарласыңыз, біз кідіріссіз жауап береміз!
                                 </p>
                                 <ul class="contact__list">
                                     <li class="contact__list-item">+995571109605</li>
                                     <li class="contact__list-item">office@work-point.pro</li>
                                     <li class="contact__list-item">
-                                        ул. Большая Ордынка, 50 строение 2, Москва, Россия, 119017
+                                        улица Чайковского 36, Алматы 050000, Казахстан
                                     </li>
                                 </ul>
                             </div>
@@ -122,16 +124,16 @@
                                             type="text"
                                             id="name"
                                             name="name"
-                                            data-error="Неправильное имя"
+                                            data-error="Қате атау"
                                             data-required
-                                            placeholder="Имя " />
+                                            placeholder="Аты " />
                                     </div>
                                     <div>
                                         <input
                                             type="text"
                                             id="surname"
                                             name="surname"
-                                            placeholder="Фамилия " />
+                                            placeholder="Тегі" />
                                     </div>
                                 </div>
 
@@ -142,15 +144,15 @@
                                             id="email"
                                             name="email"
                                             data-required="email"
-                                            data-error="Неправильная почта"
-                                            placeholder="Электронная почта " />
+                                            data-error="Қате пошта"
+                                            placeholder="Электрондық пошта " />
                                     </div>
                                     <div>
                                         <input
                                             type="text"
                                             name="phone"
                                             id="phone"
-                                            placeholder="Номер телефона" />
+                                            placeholder="Телефон нөмірі" />
                                     </div>
                                 </div>
 
@@ -158,24 +160,25 @@
                                     <textarea
                                         name="message"
                                         id="message"
-                                        placeholder="Расскажите, чем мы можем вам помочь"></textarea>
+                                        placeholder="Қалай көмектесе алатынымызды білуге ​​мүмкіндік беріңіз"></textarea>
                                 </div>
                                 <div>
-                                    <span class="upload__subtitle"
-                                        >Приложите соответствующие файлы:</span
-                                    >
+                                    <span class="upload__subtitle">Тиісті файлдарды тіркеңіз:</span>
                                 </div>
 
                                 <div class="form__file">
                                     <label for="file-upload" class="file-label">
-                                        <img src="/img/upload.svg" alt="upload" /> Загрузить файл
+                                        <img src="/img/upload.svg" alt="upload" /> Файлды жүктеп
+                                        салу
                                     </label>
                                     <input
                                         type="file"
                                         id="file-upload"
                                         name="attachment"
                                         class="file-input" />
-                                    <span id="file-chosen" class="file-chosen">Файл не выбран</span>
+                                    <span id="file-chosen" class="file-chosen"
+                                        >Ешбір файл таңдалмады</span
+                                    >
                                 </div>
                                 <!-- custom script -->
                                 <script>
@@ -195,14 +198,16 @@
                                 <div class="form__checkbox">
                                     <input type="checkbox" id="agree" name="agree" required />
                                     <label for="agree">
-                                        Я прочитал(а) и согласен(а) с
-                                        <a href="policy.html">Политикой конфиденциальности</a> и
-                                        <a href="terms.html">Условиями использования</a>
-                                        <span> Workpoint</span>!
+                                        Мен <span>Workpoint</span>
+                                        <a href="policy.html">құпиялылық саясатын</a> мен
+                                        <a href="terms.html">пайдалану шарттарын</a> оқыдым және
+                                        келісемін!
                                     </label>
                                 </div>
 
-                                <button class="contact__btn btn" type="submit">Отправить</button>
+                                <button class="contact__btn btn" type="submit">
+                                    Өтінішіңізді жіберіңіз
+                                </button>
                             </form>
                         </div>
                     </div>
@@ -216,25 +221,35 @@
                                 <img src="/img/logo.svg" alt="People Find" />
                             </div>
                             <ul class="footer__nav-top">
-                                <li class="footer__link"><a href="/kz">Главная</a></li>
-                                <li class="footer__link"><a href="/kz/about.html">О нас</a></li>
-                                <li class="footer__link"><a href="/kz/services.html">Услуги</a></li>
-                                <li class="footer__link"><a href="/kz/clients.html">Клиенты</a></li>
-                                <li class="footer__link"><a href="/kz/careers.html">Карьера</a></li>
+                                <li class="footer__link"><a href="/kz">Үй</a></li>
                                 <li class="footer__link">
-                                    <a href="/kz/contact.html">Контакты</a>
+                                    <a href="/kz/about.html">Біз туралы</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/services.html">Қызметтер</a>
+                                </li>
+                                <li class="footer__link">
+                                    <a href="/kz/clients.html">Клиенттер</a>
+                                </li>
+                                <li class="footer__link"><a href="/kz/careers.html">Мансап</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/contact.html">Байланыс</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer__bottom">
                         <div class="footer__wrapper-bottom">
-                            <div class="footer__copy">Copyright © 2025. Все права защищены.</div>
+                            <div class="footer__copy">
+                                Copyright © 2025. Барлық құқықтар қорғалған.
+                            </div>
                             <ul class="footer__nav-bottom">
                                 <li class="footer__link">
-                                    <a href="policy.html">Политика конфиденциальности</a>
+                                    <a href="/kz/policy.html">Құпиялылық саясаты</a>
                                 </li>
-                                <li class="footer__link"><a href="terms.html">Условия</a></li>
+                                <li class="footer__link">
+                                    <a href="/kz/terms.html">Пайдалану шарттары</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -263,7 +278,7 @@
                                 stroke-linecap="square"></path>
                         </svg>
                     </button>
-                    <div class="popup__text">Форма успешно отправлена!</div>
+                    <div class="popup__text">Пішін сәтті жіберілді!</div>
                 </div>
             </div>
         </div>
